<resources>
    <string name="app_name">Snack App</string>
    <string name="action_add_item">Add Menu Item</string>
    <string name="category_content_veggie">Veggie</string>
    <string name="category_content_non_veggie">Non-Veggie</string>
    <string name="button_content_submit">Submit Order</string>
    <string name="button_add_item_save">Save</string>
    <string name="button_add_item_cancel">Cancel</string>
    <string name="hint_add_item_name">New item name</string>
    <string name="dialog_error_try_again">Try Again</string>
    <string name="dialog_error_title">Add Item Failed</string>
</resources>
